# v8_bootstrap

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  LICENSE-APACHE  LICENSE-BSD-2-gjenkinson  LICENSE-MIT  grab_dep.sh  grab_source.sh  initialise_chromium_submodules.sh  readme.md
cheribsd-patches/: patch-base_BUILD.gn  patch-base_metrics_crc32.cc  patch-third__party_zlib_crc32__simd.c  patch-v8_include_v8config.h  patch-v8_samples_hello__world.cc  patch-v8_src_d8_d8__posix.cc
